# ppLTLTT

./: README.md  ppLTLTT.cabal
examples/: arbiter1  arbiter1slugs  arbiter2  arbiter2slugs  arbiter3  arbiter3slugs  arbiter4  arbiter4slugs  arbiter5  arbiter5slugs  arbiter6  arbiter6slugs  arbiterFuture1  arbiterFuture2  arbiterFuture3  arbiterFuture4  arbiterFuture5  arbiterFuture6  arbiterFuture7  arbiterFuture8  arbiterFuture9
genarbiter/: genArbiter.hs
pltl2tgba/: README.md  pltl2tgba.hs
ppLTLTT/: README.md  ppLTLTT.hs
pslugs/: README.md  pslugs.hs
pstrix/: README.md  pstrix.hs
scripts/: README.md  arbiter1couvreur  arbiter1goalcouvreur.sh  arbiter1goalltl2aut+.sh  arbiter1goalltl2aut.sh  arbiter1goalltl2buchi.sh  arbiter1goalmodella.sh  arbiter1ltl2aut  arbiter1ltl2aut+  arbiter1ltl2buchi  arbiter1modella  arbiter1pltl2tgba.sh  arbiter1pslugs.sh  arbiter1pstrix.sh  arbiter2couvreur  arbiter2goalcouvreur.sh  arbiter2goalltl2aut+.sh  arbiter2goalltl2aut.sh  arbiter2goalltl2buchi.sh  arbiter2goalmodella.sh  arbiter2ltl2aut  arbiter2ltl2aut+  arbiter2ltl2buchi  arbiter2modella  arbiter2pltl2tgba.sh  arbiter2pslugs.sh  arbiter2pstrix.sh  arbiter3couvreur  arbiter3goalcouvreur.sh  arbiter3goalltl2aut+.sh  arbiter3goalltl2aut.sh  arbiter3goalltl2buchi.sh  arbiter3goalmodella.sh  arbiter3ltl2aut  arbiter3ltl2aut+  arbiter3ltl2buchi  arbiter3modella  arbiter3pltl2tgba.sh  arbiter3pslugs.sh  arbiter3pstrix.sh  (+9 more)
src/args/: ArgsPPLTLTT.hs  ArgsPSlugs.hs  ArgsPStrix.hs  ArgsPltl2tgba.hs
src/common/: AbsLTL.hs  Common.hs  EncodeTT.hs  HOA.hs  PLTL.hs  PPAbstraction.hs
src/parsers/: ParserHOA.hs  ParserSlugs.hs  ParserSpot.hs  ParserStrix.hs
